Created Multiple pages

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -7,20 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Dependencies
 node_modules
-
-# Build output
 dist
 dist-ssr
 *.local
 
-# Environment variables
-.env
-.env.*
-!.env.example
-
-# Editor / OS files
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
